footnote inline block

--- a/history/hinduism/tolerance.html
+++ b/history/hinduism/tolerance.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Is Hinduism tolerant? Is it Nihilistic?</title>
@@ -210,6 +210,7 @@
 <li><a href="#org4f40a17">3. Hindu attitude towards science</a></li>
 <li><a href="#org9a44d2a">4. Pramāṇa, or epistemology</a></li>
 <li><a href="#org038243d">5. More reading</a></li>
+<li><a href="#orge4bb22a">6. Addendum: FungibleBrown syncretism</a></li>
 </ul>
 </div>
 </div>
@@ -487,10 +488,46 @@ At this point this post has turned essentially into a brief overview of Hinduism
 </ul>
 </div>
 </div>
+<div id="outline-container-orge4bb22a" class="outline-2">
+<h2 id="orge4bb22a"><span class="section-number-2">6.</span> Addendum: FungibleBrown syncretism</h2>
+<div class="outline-text-2" id="text-6">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956660834572361863">Twitter</a></p>
+</p>
+
+<p>
+Hindu syncretism is also distinct from FungibleBrown syncretism.
+</p>
+
+<p>
+For example, people forget just how many random religions had popped up in FungibleBrownistan around the same period as Christianity and Islam: Mithraism, Manichaeism, the cult of Apollonius of Tyana.
+</p>
+
+<p>
+They were syncretic, absorbing philosophy and theology from multiple sources. Manichaeism was famously a synthesis of Zoroastrianism, Buddhism and Christianity. Mithraism was based on worship of an Iranian deity Mithra (cognate to our Mitra) but absorbed many local European elements.
+</p>
+
+<p>
+These were all major cults. Apollonius of Tyana was more popular than Jesus at some point, Empress Julia Domna was sympathetic to the cult of his worship (and funded Philostratus&rsquo;s &ldquo;The Life of Apollonius of Tyana&rdquo;, which documents his travels to India); there are ancient Mithra temples all over Europe and Britain.
+</p>
+
+<p>
+But this type of synthesis was essentially a &ldquo;we now have 15 competing standards&rdquo; type of syncreticism, and did not allow them to form a unified identity against external threats.
+</p>
+
+<p>
+Also observe that it is exactly this type of syncretism that modern Left-liberals are so fond of—meme cults like Din-i-ilahi, Baha&rsquo;i, Ganga-Jamuna Tehjeeb, are all romanticized precisely because they are impotent.
+</p>
+
+<p>
+Hinduism doesn&rsquo;t need to be syncretized with anything—it is already syncretic, and provides a positive vision that allows it to actually unify what it syncretizes rather than just be the 15th competing standard.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
