--- a/politics/agency/incel.html
+++ b/politics/agency/incel.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Agency, bhōsaḍpillers and Party Workers vs Customers ⭐</title>
@@ -212,7 +212,7 @@
 </ul>
 </li>
 <li><a href="#orgbfdff49">2. Agency and incels</a></li>
-<li><a href="#org6b94e38">3. Bhōsaḍpillers vs leftists</a></li>
+<li><a href="#orgf73cb79">3. Our Useless Bhōsaḍpillers vs Their Glorious Extremists</a></li>
 </ul>
 </div>
 </div>
@@ -421,8 +421,8 @@ If you think about it for two seconds, none of these are natural thoughts at all
 </p>
 </div>
 </div>
-<div id="outline-container-org6b94e38" class="outline-2">
-<h2 id="org6b94e38"><span class="section-number-2">3.</span> Bhōsaḍpillers vs leftists</h2>
+<div id="outline-container-orgf73cb79" class="outline-2">
+<h2 id="orgf73cb79"><span class="section-number-2">3.</span> Our Useless Bhōsaḍpillers vs Their Glorious Extremists</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1853670328343666822">Twitter</a></p>
@@ -464,7 +464,7 @@ There is no feeling of danger that they evoke in people. Even more importantly t
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
