--- a/politics/agency/useful.html
+++ b/politics/agency/useful.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>How you can be more useful to the Party: a guide</title>
@@ -206,7 +206,8 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#orgef2b49f">1. Indigenous Cathedral</a></li>
-<li><a href="#orge45e8ab">2. How you can be more useful to the Party: a guide.</a></li>
+<li><a href="#orgaabf2e4">2. Example of media that should be made</a></li>
+<li><a href="#orge45e8ab">3. How you can be more useful to the Party: a guide.</a></li>
 </ul>
 </div>
 </div>
@@ -242,9 +243,42 @@ You need your own Cathedral. A robust and credible network of sources of informa
 </p>
 </div>
 </div>
-<div id="outline-container-orge45e8ab" class="outline-2">
-<h2 id="orge45e8ab"><span class="section-number-2">2.</span> How you can be more useful to the Party: a guide.</h2>
+<div id="outline-container-orgaabf2e4" class="outline-2">
+<h2 id="orgaabf2e4"><span class="section-number-2">2.</span> Example of media that should be made</h2>
 <div class="outline-text-2" id="text-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956557884600590395">Twitter</a></p>
+We need a Pro-sweatshop film/TV series.
+</p>
+
+<p>
+Imagine: the sweatshop-owner is initially demonized as an evil greedy guy, but as the film progresses the protagonist (a farmer who started working for him because his farm income wasn&rsquo;t enough for his son&rsquo;s education) realizes he&rsquo;s the only one helping him while everyone else is virtue-signalling and using him.
+</p>
+
+<p>
+At no point should you show the sweatshop-owner as having a &ldquo;soft side&rdquo; or doing any altruist favours. But just by pursuing profit he generates employment for the protagonist and others.
+</p>
+
+<p>
+Congressis shut down the factory with some regulatory reason, causing hardship. The sweatshop-owner and his workers work out a way to continue working illegally.
+</p>
+
+<p>
+At some point someone instigates them to unionize; the result is the union having a monopoly on labor and others being excluded from employment; the protagonist takes pity on them, leaves the union and raises the excluded workers into a Private Military Corporation to crack down on strikes like the Pinkertons.
+</p>
+
+<p>
+Another episode where environmentalists are the problem, and Durges&rsquo;s Pinkertons gun down all the tree-huggers. Filled with allusions to Kṛṣṇa and Arjuna burning down the Khāṇḍava forest.
+</p>
+
+<p>
+All this is in the backdrop of a village that&rsquo;s slowly turning into an industrial hub, Laura Ingalls style, or maybe Old Western, against the challenges posed by Congressis, activist groups, and media/filmmakers trying to make him look like the problem.
+</p>
+</div>
+</div>
+<div id="outline-container-orge45e8ab" class="outline-2">
+<h2 id="orge45e8ab"><span class="section-number-2">3.</span> How you can be more useful to the Party: a guide.</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 Ever find yourself thinking: &ldquo;How can I stop being so useless? How can I actually make my side and tribe win? How can I finally make NiṣādaHermaphroditarchaṃśa proud?&rdquo;
 </p>
@@ -291,7 +325,7 @@ another option: become very successful and do politics as a side-quest. E.g. Elo
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
