--- a/politics/leli-ideology/liberal_ideology.html
+++ b/politics/leli-ideology/liberal_ideology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Modern liberalism as the ideology of dehātization ⭐</title>
@@ -205,48 +205,18 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgca9b44d">1. libs approve of chai turmeric hinduism</a></li>
-<li><a href="#org25dc90c">2. Left-liberalism is the ideology of anti-Sanskritization</a></li>
-<li><a href="#org4815fc2">3. millennial snot</a></li>
+<li><a href="#orgbdfe999">1. Left-liberalism as Mlecchavāda: the belief in The Triumph of Noble Savagedom</a></li>
+<li><a href="#orgca9b44d">2. libs approve of chai turmeric hinduism</a></li>
+<li><a href="#org8c27e15">3. Leftism as inverse Hinduism</a></li>
 <li><a href="#org66e462c">4. recursive revolution</a></li>
-<li><a href="#org600e8c8">5. cultural &ldquo;hypocrisy&rdquo;</a></li>
+<li><a href="#org986f1ce">5. Culture</a></li>
+<li><a href="#orgf0da4d5">6. Left-liberalism vs communism, and its self-conception</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgca9b44d" class="outline-2">
-<h2 id="orgca9b44d"><span class="section-number-2">1.</span> libs approve of chai turmeric hinduism</h2>
+<div id="outline-container-orgbdfe999" class="outline-2">
+<h2 id="orgbdfe999"><span class="section-number-2">1.</span> Left-liberalism as Mlecchavāda: the belief in The Triumph of Noble Savagedom</h2>
 <div class="outline-text-2" id="text-1">
-<p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1931559373840502813">Twitter</a></p>
-</p>
-
-<div class="org-src-container">
-<pre class="src src-nil">If Hindus sided with Western Liberals, this wouldn't happen
-
-I will never understand why Hindus try to side with Right Wing Christians who hate pagans
-</pre>
-</div>
-
-<p>
-Delusional. Hindus were voting ~90% Democrat until 2024 and are heavily entrenched in woke/prog causes.
-</p>
-
-<p>
-Liberals would happily accept nominal &ldquo;Hindus&rdquo; into their fold, provided you: abandon Hindutva, tolerate attacks by Ms, form a united front with Pakistan to be a meat-grinder against China, and restrict your Hindu identity to turmeric chai-latte, Taj Mahal and LARPing as goddesses and nature-worshipping hippies while you sing praises of Aurangazeb.
-</p>
-
-<p>
-Please do not think Liberals are dumb or easy to manipulate. The battle lines are already drawn, and they understand this very well. Their fundamental ideology is dehātization: they believe that in every circumstance and every conflict, the primitive, barbaric and criminal side should prevail over the advanced, civilized and productive — as the former is always perceived as the &ldquo;victim&rdquo;.
-</p>
-
-<p>
-The only way to gain their support is to give up everything you care about, and become the former (primitive, barbaric and criminal).
-</p>
-</div>
-</div>
-<div id="outline-container-org25dc90c" class="outline-2">
-<h2 id="org25dc90c"><span class="section-number-2">2.</span> Left-liberalism is the ideology of anti-Sanskritization</h2>
-<div class="outline-text-2" id="text-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1867148829180485756">Twitter</a></p>
 </p>
@@ -308,25 +278,51 @@ Instead, the only way one curries the favour of the left, get a share of its pow
 </p>
 </div>
 </div>
-<div id="outline-container-org4815fc2" class="outline-2">
-<h2 id="org4815fc2"><span class="section-number-2">3.</span> millennial snot</h2>
+<div id="outline-container-orgca9b44d" class="outline-2">
+<h2 id="orgca9b44d"><span class="section-number-2">2.</span> libs approve of chai turmeric hinduism</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1931559373840502813">Twitter</a></p>
+</p>
+
+<div class="org-src-container">
+<pre class="src src-nil">If Hindus sided with Western Liberals, this wouldn't happen
+
+I will never understand why Hindus try to side with Right Wing Christians who hate pagans
+</pre>
+</div>
+
+<p>
+Delusional. Hindus were voting ~90% Democrat until 2024 and are heavily entrenched in woke/prog causes.
+</p>
+
+<p>
+Liberals would happily accept nominal &ldquo;Hindus&rdquo; into their fold, provided you: abandon Hindutva, tolerate attacks by Ms, form a united front with Pakistan to be a meat-grinder against China, and restrict your Hindu identity to turmeric chai-latte, Taj Mahal and LARPing as goddesses and nature-worshipping hippies while you sing praises of Aurangazeb.
+</p>
+
+<p>
+Please do not think Liberals are dumb or easy to manipulate. The battle lines are already drawn, and they understand this very well. Their fundamental ideology is dehātization: they believe that in every circumstance and every conflict, the primitive, barbaric and criminal side should prevail over the advanced, civilized and productive — as the former is always perceived as the &ldquo;victim&rdquo;.
+</p>
+
+<p>
+The only way to gain their support is to give up everything you care about, and become the former (primitive, barbaric and criminal).
+</p>
+</div>
+</div>
+<div id="outline-container-org8c27e15" class="outline-2">
+<h2 id="org8c27e15"><span class="section-number-2">3.</span> Leftism as inverse Hinduism</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1844233646842040648">Twitter</a></p>
-</p>
-
-<blockquote>
-<p>
-These are middle-aged PhDs with prestigious careers, talking like snotty teenagers or sassy black drag queens.
-</p>
-</blockquote>
-
-<p>
-This is dehātization.
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1952881673466691994">Twitter</a></p>
+The 3 goals (Puruṣārtha) are Artha, Dharma and Kāma. Leftism worships Degrowth, Barbarism and Ugliness.
 </p>
 
 <p>
-The basic rot in &ldquo;Western&rdquo; (more generally &ldquo;democratic&rdquo;) culture is it places the dehāt at highest status, as the objective of aspiration.
+The 3 obligations (Ṛṇatraya) are to produce children, to learn and to maintain religion. Leftism says you have no such obligations.
+</p>
+
+<p>
+Leftism is the inversion of Hinduism.
 </p>
 </div>
 </div>
@@ -347,9 +343,35 @@ The 1000-year plan finally concludes with queer aborginal australian muslims sac
 </p>
 </div>
 </div>
-<div id="outline-container-org600e8c8" class="outline-2">
-<h2 id="org600e8c8"><span class="section-number-2">5.</span> cultural &ldquo;hypocrisy&rdquo;</h2>
+<div id="outline-container-org986f1ce" class="outline-2">
+<h2 id="org986f1ce"><span class="section-number-2">5.</span> Culture</h2>
 <div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1844233646842040648">Twitter</a></p>
+</p>
+
+<p>
+The early Hindus held the culture of Kuru-Pañcāla to be the high culture that all men everywhere should emulate; Islam similarly held Arabic culture as high culture.
+</p>
+
+<p>
+Left-liberalism holds the Dehāt as high culture.
+</p>
+
+<blockquote>
+<p>
+These are middle-aged PhDs with prestigious careers, talking like snotty teenagers or sassy black drag queens.
+</p>
+</blockquote>
+
+<p>
+This is dehātization.
+</p>
+
+<p>
+The basic rot in &ldquo;Western&rdquo; (more generally &ldquo;democratic&rdquo;) culture is it places the dehāt at highest status, as the objective of aspiration.
+</p>
+
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1955452748079804794">Twitter</a></p>
 Ever notice how when attacking cultural &ldquo;hypocrisy&rdquo;, libs always subtly take the side of the vice?
@@ -364,10 +386,32 @@ Likewise for &ldquo;hypcorite parents&rdquo;, &ldquo;hypocrite religious people&
 </p>
 </div>
 </div>
+<div id="outline-container-orgf0da4d5" class="outline-2">
+<h2 id="orgf0da4d5"><span class="section-number-2">6.</span> Left-liberalism vs communism, and its self-conception</h2>
+<div class="outline-text-2" id="text-6">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1949729233644999109">Twitter</a></p>
+</p>
+
+<p>
+Greek math : Indian math
+~ Communism : Left-liberalism
+~ Jñāna-mārga : Bhakti-mārga
+</p>
+
+<p>
+The former derives beliefs from strict axiomatic foundations while the latter derives it more intuitively/instinctively by deriving things in random directions in a memespace.
+</p>
+
+<p>
+Feynman called it &ldquo;Greek school vs Babylonian school&rdquo; IIRC.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
