--- a/politics/leli-ideology/origin.html
+++ b/politics/leli-ideology/origin.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Origin</title>
@@ -202,20 +202,33 @@
 <div id="content" class="content">
 <h1 class="title">Origin</h1>
 <p>
-I do wonder what the &ldquo;cause&rdquo; or &ldquo;root&rdquo; of this ideology is.
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956249296397103403">Twitter</a></p>
 </p>
+
+<p>
+What is the &ldquo;cause&rdquo; or &ldquo;root&rdquo; of the Left-liberal ideology? I can think of:
+</p>
+
 <ol class="org-ol">
-<li>simple network effects (what dominates the ideological aether remains so &#x2013; because of status quo bias and the Cathedral pushing it)</li>
-<li>fundamental human instincts &#x2014; suicidal empathy, counter-signalling, bonoboism etc.</li>
-<li>big-braining/contrarianism to traditional morality</li>
-<li>self-interest of the slave groups/democratic incentives</li>
-<li>rhetorical ease of defending leftist beliefs</li>
-<li>taking &ldquo;<a href="https://x.com/nixonist/status/1817726711317909617">polite fictions</a>&rdquo; seriously</li>
-<li>Christian influences &#x2014; <a href="https://x.com/Akshay_VAK/status/1947184696846332071">meek shall inherit earth</a> etc.</li>
+<li>Simple network effects (what dominates the ideological aether remains so – because of status quo bias and the Cathedral pushing it)</li>
+
+<li>Fundamental human instincts — suicidal empathy, counter-signalling, bonoboism etc.</li>
+
+<li>Big-braining, i.e. contrarianism to (and indeed inversion of) traditional morality</li>
+
+<li>Immediate self-interest of the noble savage groups that Leftism represents, due to democratic incentives (Leftism doesn&rsquo;t <b>actually</b> serve anyone&rsquo;s interests, but democracy might create game-theoretic incentives for it)</li>
+
+<li>Fundamental rhetorical ease of defending leftist beliefs</li>
+
+<li>Taking “<a href="https://x.com/nixonist/status/1817726711317909617">polite fictions</a>” seriously</li>
+
+<li>Christian influences — &ldquo;<a href="https://x.com/Akshay_VAK/status/1947184696846332071">meek shall inherit the earth</a>&rdquo; etc.</li>
+
+<li>The wealth created by the industrial revolution removed Darwinian pressures against suicidal ideologies</li>
 </ol>
 
 <p>
-Of course all are relevant but in what ratio
+In what ratios is each factor relevant?
 </p>
 
 <p>
@@ -250,7 +263,7 @@ Oh I see: maybe such ideas always existed, but the surplus created by industrial
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
