--- a/politics/leli-raj/aether.html
+++ b/politics/leli-raj/aether.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Leftist Ideological Ather and Lay Leftists ⭐</title>
@@ -206,7 +206,8 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#org9e533b4">1. ideological vs pragmatic objections</a></li>
-<li><a href="#org7294b4d">2. Hate vs mockery</a></li>
+<li><a href="#org1b1cb69">2. Real socialism</a></li>
+<li><a href="#org7294b4d">3. Hate vs mockery</a></li>
 </ul>
 </div>
 </div>
@@ -224,6 +225,10 @@ I think it&rsquo;s because of the &ldquo;Leftist Ideological Aether&rdquo;, whic
 <div id="outline-container-org9e533b4" class="outline-2">
 <h2 id="org9e533b4"><span class="section-number-2">1.</span> ideological vs pragmatic objections</h2>
 <div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956260222055670148">Twitter</a></p>
+</p>
+
 <p>
 The way the non-left argues against leftists is always by posing as &ldquo;pragmatists&rdquo;. Laughing off the latter&rsquo;s ideas as naive/idealistic, or &ldquo;too radical&rdquo;.
 </p>
@@ -259,9 +264,26 @@ While centrists or &ldquo;liberals&rdquo; are chiefly guilty of this, RWs also d
 </p>
 </div>
 </div>
-<div id="outline-container-org7294b4d" class="outline-2">
-<h2 id="org7294b4d"><span class="section-number-2">2.</span> Hate vs mockery</h2>
+<div id="outline-container-org1b1cb69" class="outline-2">
+<h2 id="org1b1cb69"><span class="section-number-2">2.</span> Real socialism</h2>
 <div class="outline-text-2" id="text-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1957252698010681411">Twitter</a></p>
+The problem with the &ldquo;socialism has never been achieved in practice&rdquo; meme is:
+</p>
+
+<ol class="org-ol">
+<li>RealSocialism™ would be much worse than the authoritarian socialism/state capitalism of real-world communist states. Resources being managed by the state is still better than resources being &ldquo;public property&rdquo;—whether in the sense of &ldquo;libertarian socialism&rdquo; where everything is in infinite shortage due to free-rider problems, or &ldquo;democratic socialism&rdquo; where every economic transaction needs a fucking election for some reason.</li>
+
+<li>It presents socialism as some kind of ideal that, alas, pragmatic limitations prevent us from achieving. This turns people into what I call &ldquo;Lay Leftists&rdquo; (in analogy to the Lay Buddhists of antiquity—who participated in normal urban life but viewed becoming a Buddhist monk as an ideal they simply could not live up to).</li>
+
+<li>It gives you no weapon against all of the steps en-route to socialism. After all how can &ldquo;socialism has never been achieved&rdquo; be an argument against socialized healthcare or pensions? Those <b>have</b> been achieved &#x2026; they&rsquo;re just bad.</li>
+</ol>
+</div>
+</div>
+<div id="outline-container-org7294b4d" class="outline-2">
+<h2 id="org7294b4d"><span class="section-number-2">3.</span> Hate vs mockery</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1943045801737097550">Twitter</a></p>
 </p>
@@ -295,7 +317,7 @@ The leftist HATES the sangh pracharak and sees them as enemy, the RW MOCKS the g
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
