--- a/politics/leli-raj/classical_liberalism.html
+++ b/politics/leli-raj/classical_liberalism.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Classical Liberalism</title>
@@ -201,6 +201,44 @@
 </div>
 <div id="content" class="content">
 <h1 class="title">Classical Liberalism</h1>
+<div id="table-of-contents" role="doc-toc">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents" role="doc-toc">
+<ul>
+<li><a href="#orgaa8a2bf">1. Hinduism : Buddhism = Classical Liberalism : Left-liberalism</a></li>
+<li><a href="#org2294625">2. Classical liberalism does not share anything with Left-liberalism, colonialism notwithstanding</a></li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgaa8a2bf" class="outline-2">
+<h2 id="orgaa8a2bf"><span class="section-number-2">1.</span> Hinduism : Buddhism = Classical Liberalism : Left-liberalism</h2>
+<div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1837856259141198154">Twitter</a></p>
+The rise of the Liberal Raj bears the greatest resemblance to the global spread of Buddhism.
+</p>
+
+<p>
+Both piggybacked on the material value created by ideologies that were &ldquo;culturally&rdquo; parent to it (Classical liberalism and Hinduism respectively), persuaded elites to take the Dharma&rsquo;s interests to be their own and eventually became the destroyers of their parent ideologies while usurping credit for the latter&rsquo;s success.
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1846590730870927532">Twitter</a></p>
+</p>
+
+<p>
+2nd urbanization : Hinduism : Buddhism =
+Industrial Revolution : Classical Liberalism : Modern Liberalism
+</p>
+
+<p>
+2 enabled 1, the surplus of which 3 piggybacked on to project global soft power
+</p>
+</div>
+</div>
+<div id="outline-container-org2294625" class="outline-2">
+<h2 id="org2294625"><span class="section-number-2">2.</span> Classical liberalism does not share anything with Left-liberalism, colonialism notwithstanding</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 Classical liberalism doesn&rsquo;t have anything ideologically in common with Left-liberalism. They share a common root much like the Abrahamic faiths share a common root, but they do not have anything common in substance.
 </p>
@@ -247,9 +285,11 @@ He should initiate the observance of all those customs, which, though righteous 
 </p>
 </blockquote>
 </div>
+</div>
+</div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
