--- a/politics/political-theory/meme-theory.html
+++ b/politics/political-theory/meme-theory.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Highly Advanced Semi-formal Meme Theory for beginners ⭐</title>
@@ -213,6 +213,7 @@
 <li><a href="#org9e82163">4.1. Begging people to stop-big-braining</a></li>
 <li><a href="#org9ed1f00">4.2. It&rsquo;s never big-braining</a></li>
 <li><a href="#org824f926">4.3. enemy of enemy</a></li>
+<li><a href="#org577d81d">4.4. small brain</a></li>
 </ul>
 </li>
 <li><a href="#org889cfdf">5. Gandhi vs Ambedkar comparisons aka Comparing Micropenises</a></li>
@@ -233,12 +234,15 @@
 <li><a href="#org99716ef">17.2. synthesis</a></li>
 </ul>
 </li>
-<li><a href="#org6c218db">18. LARP</a></li>
-<li><a href="#org3b37c9d">19. Indian Maximalism, European minimalism</a></li>
-<li><a href="#org45f1caa">20. Diffusion of blame</a></li>
-<li><a href="#orgd8fb65a">21. Arbitrage</a></li>
-<li><a href="#org167df95">22. eight ways to engage with enemies</a></li>
-<li><a href="#org81ea6a8">23. Wwnhmbkpd</a></li>
+<li><a href="#org9e581b0">18. West Bengal</a></li>
+<li><a href="#orgc6295ce">19. Civilization LARP</a></li>
+<li><a href="#org619a0a4">20. Civs</a></li>
+<li><a href="#org6c218db">21. LARP</a></li>
+<li><a href="#org3b37c9d">22. Indian Maximalism, European minimalism</a></li>
+<li><a href="#org45f1caa">23. Diffusion of blame</a></li>
+<li><a href="#orgd8fb65a">24. Arbitrage</a></li>
+<li><a href="#org167df95">25. eight ways to engage with enemies</a></li>
+<li><a href="#org81ea6a8">26. Wwnhmbkpd</a></li>
 </ul>
 </div>
 </div>
@@ -381,6 +385,19 @@ Kautilya: the enemy of my enemy is my friend
 <p>
 big-brain modern Indians:
 the enemy of my enemy is to be incessantly mocked when they are defeated by my enemy because they <code>deserve it</code>.
+</p>
+</div>
+</div>
+<div id="outline-container-org577d81d" class="outline-3">
+<h3 id="org577d81d"><span class="section-number-3">4.4.</span> small brain</h3>
+<div class="outline-text-3" id="text-4-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1934444195387003177">Twitter</a></p>
+If there is only thing you learn from my account, let it be this: Please stop big-braining. You do not have big brain. You have small brain. If you do big-braining your brain will implode and have small-brain 9/11. Because you have small brain. Put this fact in your small brain.
+</p>
+
+<p>
+Yes, this applies to you. I don&rsquo;t know who you are, but it applies to you. Including you, the Qatari dipshit spying on my account. I see you, even though I cannot see your small small brain.
 </p>
 </div>
 </div>
@@ -728,9 +745,104 @@ Totally coherent. Spank the fungible browns and chagnon-pill the big-brainers. T
 </div>
 </div>
 </div>
-<div id="outline-container-org6c218db" class="outline-2">
-<h2 id="org6c218db"><span class="section-number-2">18.</span> LARP</h2>
+<div id="outline-container-org9e581b0" class="outline-2">
+<h2 id="org9e581b0"><span class="section-number-2">18.</span> West Bengal</h2>
 <div class="outline-text-2" id="text-18">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913930968278196565">Twitter</a></p>
+</p>
+
+<p>
+West Bengal is the India of India.
+</p>
+
+<p>
+5th world poverty
+1st world wokeness
+a glorious past
+an elite diaspora
+inflated pride over being marginally better than its Northwestern neighbour
+</p>
+</div>
+</div>
+<div id="outline-container-orgc6295ce" class="outline-2">
+<h2 id="orgc6295ce"><span class="section-number-2">19.</span> Civilization LARP</h2>
+<div class="outline-text-2" id="text-19">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913369465322103182">Twitter</a></p>
+</p>
+
+<p>
+They&rsquo;re steppe-nomad LARPing because they wisely understand that LARPing as Settled Civilization BVILDers like
+</p>
+
+<p>
+Dumuzid the Shepherd
+Ārya-Paṇi union enforcer
+Silk Road Sanskritizer
+En-men-luana, who bred the earth with his seed and sired civilization
+</p>
+
+<p>
+would be blasphemy.
+</p>
+</div>
+</div>
+<div id="outline-container-org619a0a4" class="outline-2">
+<h2 id="org619a0a4"><span class="section-number-2">20.</span> Civs</h2>
+<div class="outline-text-2" id="text-20">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1952085907491934508">Twitter</a></p>
+</p>
+
+<p>
+Rome = Reddit
+</p>
+
+<p>
+Greece = Twitter
+</p>
+
+<p>
+India = Substack
+</p>
+
+<p>
+Persia = Instagram
+</p>
+
+<p>
+China = LinkedIn
+</p>
+
+<p>
+Fertile Cresent = Facebook
+</p>
+
+<p>
+Steppe = 4chan
+</p>
+
+<p>
+Transoxiana, Tarim, Tibet, SEA = Comment sections
+</p>
+
+<p>
+Egypt = Bumble
+</p>
+
+<p>
+Afghanistan = Grindr
+</p>
+
+<p>
+Everyone else = Passive lurkers
+</p>
+</div>
+</div>
+<div id="outline-container-org6c218db" class="outline-2">
+<h2 id="org6c218db"><span class="section-number-2">21.</span> LARP</h2>
+<div class="outline-text-2" id="text-21">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1908159951219929575">Twitter</a></p>
 </p>
@@ -741,8 +853,8 @@ Yes everything is fake, all anyone does is LARP. Even physics is just the univer
 </div>
 </div>
 <div id="outline-container-org3b37c9d" class="outline-2">
-<h2 id="org3b37c9d"><span class="section-number-2">19.</span> Indian Maximalism, European minimalism</h2>
-<div class="outline-text-2" id="text-19">
+<h2 id="org3b37c9d"><span class="section-number-2">22.</span> Indian Maximalism, European minimalism</h2>
+<div class="outline-text-2" id="text-22">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1849793618740908240">Twitter</a></p>
 </p>
@@ -786,8 +898,8 @@ In architecture, in food, in youtube comments going &ldquo;don&rsquo;t forget X,
 </div>
 </div>
 <div id="outline-container-org45f1caa" class="outline-2">
-<h2 id="org45f1caa"><span class="section-number-2">20.</span> Diffusion of blame</h2>
-<div class="outline-text-2" id="text-20">
+<h2 id="org45f1caa"><span class="section-number-2">23.</span> Diffusion of blame</h2>
+<div class="outline-text-2" id="text-23">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1902779955974385690">Twitter</a></p>
 </p>
@@ -813,8 +925,8 @@ Ignore the big-brain justifications. It&rsquo;s a deliberate cover operation.
 </div>
 </div>
 <div id="outline-container-orgd8fb65a" class="outline-2">
-<h2 id="orgd8fb65a"><span class="section-number-2">21.</span> Arbitrage</h2>
-<div class="outline-text-2" id="text-21">
+<h2 id="orgd8fb65a"><span class="section-number-2">24.</span> Arbitrage</h2>
+<div class="outline-text-2" id="text-24">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1854562229871636774">Twitter</a></p>
 </p>
@@ -829,8 +941,8 @@ It&rsquo;s a small risk-free profit but it won&rsquo;t drive any overwhelming na
 </div>
 </div>
 <div id="outline-container-org167df95" class="outline-2">
-<h2 id="org167df95"><span class="section-number-2">22.</span> eight ways to engage with enemies</h2>
-<div class="outline-text-2" id="text-22">
+<h2 id="org167df95"><span class="section-number-2">25.</span> eight ways to engage with enemies</h2>
+<div class="outline-text-2" id="text-25">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1875025794449219831">Twitter</a></p>
 </p>
@@ -863,8 +975,8 @@ eight ways to engage with enemies on x dot com the everything app
 </div>
 </div>
 <div id="outline-container-org81ea6a8" class="outline-2">
-<h2 id="org81ea6a8"><span class="section-number-2">23.</span> Wwnhmbkpd</h2>
-<div class="outline-text-2" id="text-23">
+<h2 id="org81ea6a8"><span class="section-number-2">26.</span> Wwnhmbkpd</h2>
+<div class="outline-text-2" id="text-26">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1937409578242871573">Twitter</a></p>
 </p>
@@ -877,7 +989,7 @@ Before posting anything, people should always think &ldquo;What would NiṣādaH
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
