--- a/politics/rhetorical-advice/misc.html
+++ b/politics/rhetorical-advice/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Misc advice on rhetoric and arguing ⭐</title>
@@ -207,31 +207,32 @@
 <ul>
 <li><a href="#orgabe6449">1. Your implicit assumptions are what people will believe ⭐</a></li>
 <li><a href="#orgcd3190c">2. Be explicit in your propaganda ⭐</a></li>
-<li><a href="#orgf7925c7">3. Truth-telling is good ⭐</a>
+<li><a href="#org7cc310c">3. Śāstrakke criticism &#x2014; saying the bare minimum to LARP as fair and neutral</a></li>
+<li><a href="#orgf7925c7">4. Truth-telling is good ⭐</a>
 <ul>
-<li><a href="#org1b9ba2a">3.1. bangladeshi</a></li>
-<li><a href="#org0380d79">3.2. general</a></li>
-<li><a href="#org9687409">3.3. negative-sum discourse</a></li>
+<li><a href="#org1b9ba2a">4.1. bangladeshi</a></li>
+<li><a href="#org0380d79">4.2. general</a></li>
+<li><a href="#org9687409">4.3. negative-sum discourse</a></li>
 </ul>
 </li>
-<li><a href="#orgf3eabf4">4. Doing propaganda against an enemy religion</a></li>
-<li><a href="#org1b9c2ad">5. Bullying</a></li>
-<li><a href="#org8e6da55">6. HC (Human Capital/Hot-Crazy) scale for political soldiers</a></li>
-<li><a href="#org63275eb">7. Potency</a></li>
-<li><a href="#orgb1466fb">8. Eggspoze aesthetic</a></li>
-<li><a href="#orgd2c3109">9. Err on the side of action</a>
+<li><a href="#orgf3eabf4">5. Doing propaganda against an enemy religion</a></li>
+<li><a href="#org1b9c2ad">6. Bullying</a></li>
+<li><a href="#org8e6da55">7. HC (Human Capital/Hot-Crazy) scale for political soldiers</a></li>
+<li><a href="#org63275eb">8. Potency</a></li>
+<li><a href="#orgb1466fb">9. Eggspoze aesthetic</a></li>
+<li><a href="#orgd2c3109">10. Err on the side of action</a>
 <ul>
-<li><a href="#orgc3a0a03">9.1. Meta-advice</a></li>
+<li><a href="#orgc3a0a03">10.1. Meta-advice</a></li>
 </ul>
 </li>
-<li><a href="#orge9d32b7">10. Priorities</a></li>
-<li><a href="#org87c9bd9">11. Debate in modern times is never good-faith</a></li>
-<li><a href="#org33ba0f2">12. The correct engagement with US politics</a>
+<li><a href="#orge9d32b7">11. Priorities</a></li>
+<li><a href="#org87c9bd9">12. Debate in modern times is never good-faith</a></li>
+<li><a href="#org33ba0f2">13. The correct engagement with US politics</a>
 <ul>
-<li><a href="#org21021bd">12.1. mudfighting with wignats</a></li>
+<li><a href="#org21021bd">13.1. mudfighting with wignats</a></li>
 </ul>
 </li>
-<li><a href="#org12c19ef">13. Virtue</a></li>
+<li><a href="#org12c19ef">14. Virtue</a></li>
 </ul>
 </div>
 </div>
@@ -293,13 +294,38 @@ This is not 1980s Britain. This is the land of emotionally incontinent reel-addi
 </p>
 </div>
 </div>
-<div id="outline-container-orgf7925c7" class="outline-2">
-<h2 id="orgf7925c7"><span class="section-number-2">3.</span> Truth-telling is good ⭐</h2>
+<div id="outline-container-org7cc310c" class="outline-2">
+<h2 id="org7cc310c"><span class="section-number-2">3.</span> Śāstrakke criticism &#x2014; saying the bare minimum to LARP as fair and neutral</h2>
 <div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956926962124951865">Twitter</a></p>
+I call this &ldquo;Śāstrakke criticism&rdquo; after the Kannada expression (literally &ldquo;as needed for śāstra&rdquo;, but meaning ~bare minimum to maintain plausible deniability).
+</p>
+
+<p>
+They criticism they would levy against a Hindu saying something analogous would be far, far disproportionate. But doing the bare minimum acknowledgement here lets them pretend to be fair and secular.
+</p>
+
+<p>
+Same applies for Shekhar Gupta types paying lip service to the farm laws to LARP as libertarian, or CentristLibs™ pretending to be different from leftists.
+</p>
+
+<p>
+&ldquo;See I criticize my side when it&rsquo;s the wrong, I&rsquo;m so fair!&rdquo;
+</p>
+
+<p>
+The trick is to pick an irrelevant crazy-sounding person/claim on your side with zero traction, and criticize it—bonus points for doing it in a way that actually gives it legitimacy as if it were a reasonable suggestion.
+</p>
+</div>
+</div>
+<div id="outline-container-orgf7925c7" class="outline-2">
+<h2 id="orgf7925c7"><span class="section-number-2">4.</span> Truth-telling is good ⭐</h2>
+<div class="outline-text-2" id="text-4">
 </div>
 <div id="outline-container-org1b9ba2a" class="outline-3">
-<h3 id="org1b9ba2a"><span class="section-number-3">3.1.</span> bangladeshi</h3>
-<div class="outline-text-3" id="text-3-1">
+<h3 id="org1b9ba2a"><span class="section-number-3">4.1.</span> bangladeshi</h3>
+<div class="outline-text-3" id="text-4-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1933118191968161933">Twitter</a></p>
 This is a problem.
@@ -311,8 +337,8 @@ We need to create a consensus (both locally and abroad) about the atrocities in 
 </div>
 </div>
 <div id="outline-container-org0380d79" class="outline-3">
-<h3 id="org0380d79"><span class="section-number-3">3.2.</span> general</h3>
-<div class="outline-text-3" id="text-3-2">
+<h3 id="org0380d79"><span class="section-number-3">4.2.</span> general</h3>
+<div class="outline-text-3" id="text-4-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1933125553399448041">Twitter</a></p>
 </p>
@@ -331,8 +357,8 @@ In building institutions, everything is a repeated game.
 </div>
 </div>
 <div id="outline-container-org9687409" class="outline-3">
-<h3 id="org9687409"><span class="section-number-3">3.3.</span> negative-sum discourse</h3>
-<div class="outline-text-3" id="text-3-3">
+<h3 id="org9687409"><span class="section-number-3">4.3.</span> negative-sum discourse</h3>
+<div class="outline-text-3" id="text-4-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1943952401180111044">Twitter</a></p>
 All discourse between adversaries is misinformation on net by its nature, just like war is -ve-sum. Debate kills Truth like War kills Wealth. Nonetheless we must do it.
@@ -349,8 +375,8 @@ But that doesn&rsquo;t mean letting Libs coronate themselves with the authority 
 </div>
 </div>
 <div id="outline-container-orgf3eabf4" class="outline-2">
-<h2 id="orgf3eabf4"><span class="section-number-2">4.</span> Doing propaganda against an enemy religion</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="orgf3eabf4"><span class="section-number-2">5.</span> Doing propaganda against an enemy religion</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1793230956289040586">Twitter</a></p>
 </p>
@@ -413,8 +439,8 @@ Also OT but the use of the &ldquo;kheti&rdquo; quote as an own is embarrassing, 
 </div>
 </div>
 <div id="outline-container-org1b9c2ad" class="outline-2">
-<h2 id="org1b9c2ad"><span class="section-number-2">5.</span> Bullying</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org1b9c2ad"><span class="section-number-2">6.</span> Bullying</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1931929027469611244">Twitter</a></p>
 </p>
@@ -429,8 +455,8 @@ Libs bully too, but for specific political/cultural goals—they bully their ene
 </div>
 </div>
 <div id="outline-container-org8e6da55" class="outline-2">
-<h2 id="org8e6da55"><span class="section-number-2">6.</span> HC (Human Capital/Hot-Crazy) scale for political soldiers</h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="org8e6da55"><span class="section-number-2">7.</span> HC (Human Capital/Hot-Crazy) scale for political soldiers</h2>
+<div class="outline-text-2" id="text-7">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1935566400879477238">Twitter</a></p>
 </p>
@@ -461,8 +487,8 @@ One who is far from the frontier should not be elevated or rewarded. One who bre
 </div>
 </div>
 <div id="outline-container-org63275eb" class="outline-2">
-<h2 id="org63275eb"><span class="section-number-2">7.</span> Potency</h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="org63275eb"><span class="section-number-2">8.</span> Potency</h2>
+<div class="outline-text-2" id="text-8">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926101661325422662">Twitter</a></p>
 </p>
@@ -481,8 +507,8 @@ When the king talks, it should be backed by action. Otherwise he deludes his own
 </div>
 </div>
 <div id="outline-container-orgb1466fb" class="outline-2">
-<h2 id="orgb1466fb"><span class="section-number-2">8.</span> Eggspoze aesthetic</h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="orgb1466fb"><span class="section-number-2">9.</span> Eggspoze aesthetic</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913795004650426624">Twitter</a></p>
 </p>
@@ -501,8 +527,8 @@ For everything else, just state it as established knowledge: signals that you kn
 </div>
 </div>
 <div id="outline-container-orgd2c3109" class="outline-2">
-<h2 id="orgd2c3109"><span class="section-number-2">9.</span> Err on the side of action</h2>
-<div class="outline-text-2" id="text-9">
+<h2 id="orgd2c3109"><span class="section-number-2">10.</span> Err on the side of action</h2>
+<div class="outline-text-2" id="text-10">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1902057103445151806">Twitter</a></p>
 </p>
@@ -526,8 +552,8 @@ Also people who are unstable characters swinging wildly from one issue to anothe
 </p>
 </div>
 <div id="outline-container-orgc3a0a03" class="outline-3">
-<h3 id="orgc3a0a03"><span class="section-number-3">9.1.</span> Meta-advice</h3>
-<div class="outline-text-3" id="text-9-1">
+<h3 id="orgc3a0a03"><span class="section-number-3">10.1.</span> Meta-advice</h3>
+<div class="outline-text-3" id="text-10-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926113645357867217">Twitter</a></p>
 </p>
@@ -551,8 +577,8 @@ Must do opposite.
 </div>
 </div>
 <div id="outline-container-orge9d32b7" class="outline-2">
-<h2 id="orge9d32b7"><span class="section-number-2">10.</span> Priorities</h2>
-<div class="outline-text-2" id="text-10">
+<h2 id="orge9d32b7"><span class="section-number-2">11.</span> Priorities</h2>
+<div class="outline-text-2" id="text-11">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1911986085301027045">Twitter</a></p>
 </p>
@@ -569,8 +595,8 @@ The most important points to hammer in to the in-group  right now are:
 </div>
 </div>
 <div id="outline-container-org87c9bd9" class="outline-2">
-<h2 id="org87c9bd9"><span class="section-number-2">11.</span> Debate in modern times is never good-faith</h2>
-<div class="outline-text-2" id="text-11">
+<h2 id="org87c9bd9"><span class="section-number-2">12.</span> Debate in modern times is never good-faith</h2>
+<div class="outline-text-2" id="text-12">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1951490445537861904">Twitter</a></p>
 </p>
@@ -598,13 +624,25 @@ Because if you pwn those without credentials, people will just say &ldquo;great 
 </p>
 
 <p>
+HERE
+</p>
+
+<p>
+See this is what I&rsquo;m talking about when I say the ancient Hindoo practice of good-faith debate can never be replicated again.
+</p>
+
+<p>
+In antiquity, this guy would be challenging all proponents of his rival ideology to debate, and they would have to take it or risk losing their honor.
+</p>
+
+<p>
 <img src="/img/snippetry/ms2.238.jpeg" alt="ms2.238.jpeg" />
 </p>
 </div>
 </div>
 <div id="outline-container-org33ba0f2" class="outline-2">
-<h2 id="org33ba0f2"><span class="section-number-2">12.</span> The correct engagement with US politics</h2>
-<div class="outline-text-2" id="text-12">
+<h2 id="org33ba0f2"><span class="section-number-2">13.</span> The correct engagement with US politics</h2>
+<div class="outline-text-2" id="text-13">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1871171995401867276">Twitter</a></p>
 </p>
@@ -642,8 +680,8 @@ Most Indian RWs do the exact opposite:
 </ul>
 </div>
 <div id="outline-container-org21021bd" class="outline-3">
-<h3 id="org21021bd"><span class="section-number-3">12.1.</span> mudfighting with wignats</h3>
-<div class="outline-text-3" id="text-12-1">
+<h3 id="org21021bd"><span class="section-number-3">13.1.</span> mudfighting with wignats</h3>
+<div class="outline-text-3" id="text-13-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938732060874809416">Twitter</a></p>
 </p>
@@ -665,8 +703,8 @@ rather than seething at mainstream MAGA/whites themselves.
 </div>
 </div>
 <div id="outline-container-org12c19ef" class="outline-2">
-<h2 id="org12c19ef"><span class="section-number-2">13.</span> Virtue</h2>
-<div class="outline-text-2" id="text-13">
+<h2 id="org12c19ef"><span class="section-number-2">14.</span> Virtue</h2>
+<div class="outline-text-2" id="text-14">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1951831997506277506">Twitter</a></p>
 </p>
@@ -683,7 +721,7 @@ What is necessary is a calculated willingness to sacrifice virtues for a greater
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
