--- a/politics/timepass.html
+++ b/politics/timepass.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Timepass</title>
@@ -240,21 +240,18 @@
 <li><a href="#org84f10ad">1. Nobel WAR prize</a></li>
 <li><a href="#org881d955">2. battle hymn of the Hindu republic</a></li>
 <li><a href="#orgba7352d">3. Ashwini Vaishnaw</a></li>
-<li><a href="#orgc424ba1">4. West Bengal</a></li>
-<li><a href="#orgc381852">5. Civilization LARP</a></li>
-<li><a href="#orgd44c09a">6. Civs</a></li>
-<li><a href="#org24ed461">7. Coal</a></li>
-<li><a href="#org3ce4a2d">8. Cope</a></li>
-<li><a href="#orgbd00d17">9. Gurgaon</a></li>
-<li><a href="#orga0bff94">10. Imagine</a></li>
-<li><a href="#orgbacea59">11. Namaste Pakistani oil deposits</a></li>
-<li><a href="#orgab0a5c8">12. countries as operating systems</a></li>
-<li><a href="#org866c7d7">13. prophecy</a></li>
-<li><a href="#org3ed5dc1">14. Optimal Robot</a></li>
-<li><a href="#orga4a4bce">15. Sanjay Gandhi</a></li>
-<li><a href="#org5ed7e0c">16. WAR game</a></li>
-<li><a href="#org58dd7c7">17. Is it because &#x2026;</a></li>
-<li><a href="#orgfd33e31">18. never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</a></li>
+<li><a href="#org24ed461">4. Coal</a></li>
+<li><a href="#org3ce4a2d">5. Cope</a></li>
+<li><a href="#orgbd00d17">6. Gurgaon</a></li>
+<li><a href="#orga0bff94">7. Imagine</a></li>
+<li><a href="#orgbacea59">8. Namaste Pakistani oil deposits</a></li>
+<li><a href="#orgab0a5c8">9. countries as operating systems</a></li>
+<li><a href="#org866c7d7">10. prophecy</a></li>
+<li><a href="#org3ed5dc1">11. Optimal Robot</a></li>
+<li><a href="#orga4a4bce">12. Sanjay Gandhi</a></li>
+<li><a href="#org5ed7e0c">13. WAR game</a></li>
+<li><a href="#org58dd7c7">14. Is it because &#x2026;</a></li>
+<li><a href="#orgfd33e31">15. never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</a></li>
 </ul>
 </div>
 </div>
@@ -316,7 +313,7 @@ Who will defeat the forces of barbarism today—who will win the Mandate of the 
 <h2 id="org881d955"><span class="section-number-2">2.</span> battle hymn of the Hindu republic</h2>
 <div class="outline-text-2" id="text-2">
 <p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1878481882079199404">Twitter</a></p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1878482118088769914">Twitter</a></p>
 </p>
 
 <p>
@@ -360,74 +357,9 @@ We&rsquo;re going to BVILD so much, you may even get tired of BVILDing. And you&
 </p>
 </div>
 </div>
-<div id="outline-container-orgc424ba1" class="outline-2">
-<h2 id="orgc424ba1"><span class="section-number-2">4.</span> West Bengal</h2>
-<div class="outline-text-2" id="text-4">
-<p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913930968278196565">Twitter</a></p>
-</p>
-
-<p>
-West Bengal is the India of India.
-</p>
-
-<p>
-5th world poverty
-1st world wokeness
-a glorious past
-an elite diaspora
-inflated pride over being marginally better than its Northwestern neighbour
-</p>
-</div>
-</div>
-<div id="outline-container-orgc381852" class="outline-2">
-<h2 id="orgc381852"><span class="section-number-2">5.</span> Civilization LARP</h2>
-<div class="outline-text-2" id="text-5">
-<p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913369465322103182">Twitter</a></p>
-</p>
-
-<p>
-They&rsquo;re steppe-nomad LARPing because they wisely understand that LARPing as Settled Civilization BVILDers like
-</p>
-
-<p>
-Dumuzid the Shepherd
-Ārya-Paṇi union enforcer
-Silk Road Sanskritizer
-En-men-luana, who bred the earth with his seed and sired civilization
-</p>
-
-<p>
-would be blasphemy.
-</p>
-</div>
-</div>
-<div id="outline-container-orgd44c09a" class="outline-2">
-<h2 id="orgd44c09a"><span class="section-number-2">6.</span> Civs</h2>
-<div class="outline-text-2" id="text-6">
-<p>
-<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1952085907491934508">Twitter</a></p>
-</p>
-
-<p>
-Rome = Reddit
-Greece = Twitter
-India = Substack
-Persia = Instagram
-China = LinkedIn
-Fertile Cresent = Facebook
-Steppe = 4chan
-Transoxiana, Tarim, Tibet, SEA = Comment sections
-Egypt = Bumble
-Afghanistan = Grindr
-Everyone else = Passive lurkers
-</p>
-</div>
-</div>
 <div id="outline-container-org24ed461" class="outline-2">
-<h2 id="org24ed461"><span class="section-number-2">7.</span> Coal</h2>
-<div class="outline-text-2" id="text-7">
+<h2 id="org24ed461"><span class="section-number-2">4.</span> Coal</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1910341788725829840">Twitter</a></p>
 </p>
@@ -446,8 +378,8 @@ One thing I learned about the coal poasters &#x2013; that&rsquo;s what they want
 </div>
 </div>
 <div id="outline-container-org3ce4a2d" class="outline-2">
-<h2 id="org3ce4a2d"><span class="section-number-2">8.</span> Cope</h2>
-<div class="outline-text-2" id="text-8">
+<h2 id="org3ce4a2d"><span class="section-number-2">5.</span> Cope</h2>
+<div class="outline-text-2" id="text-5">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1944570662737387529">Twitter</a></p>
 </p>
@@ -462,8 +394,8 @@ Let&rsquo;s rewind 2 days ago hey fucktard, let&rsquo;s rewind 2 years ago you d
 </div>
 </div>
 <div id="outline-container-orgbd00d17" class="outline-2">
-<h2 id="orgbd00d17"><span class="section-number-2">9.</span> Gurgaon</h2>
-<div class="outline-text-2" id="text-9">
+<h2 id="orgbd00d17"><span class="section-number-2">6.</span> Gurgaon</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1943638117392728170">Twitter</a></p>
 </p>
@@ -474,8 +406,8 @@ Yes and I will pray for a hundred more Gurgaons. Your ooga-booga university, you
 </div>
 </div>
 <div id="outline-container-orga0bff94" class="outline-2">
-<h2 id="orga0bff94"><span class="section-number-2">10.</span> Imagine</h2>
-<div class="outline-text-2" id="text-10">
+<h2 id="orga0bff94"><span class="section-number-2">7.</span> Imagine</h2>
+<div class="outline-text-2" id="text-7">
 <p>
 🎶Imagine all the wannabe caliphs 🎶
 </p>
@@ -502,8 +434,8 @@ Russia oppressing Europeistan
 </div>
 </div>
 <div id="outline-container-orgbacea59" class="outline-2">
-<h2 id="orgbacea59"><span class="section-number-2">11.</span> Namaste Pakistani oil deposits</h2>
-<div class="outline-text-2" id="text-11">
+<h2 id="orgbacea59"><span class="section-number-2">8.</span> Namaste Pakistani oil deposits</h2>
+<div class="outline-text-2" id="text-8">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1926078225769283901">Twitter</a></p>
 </p>
@@ -518,8 +450,8 @@ Modi must invite Trump to India ASAP, do a Gujju-maxxed laser-projector show on 
 </div>
 </div>
 <div id="outline-container-orgab0a5c8" class="outline-2">
-<h2 id="orgab0a5c8"><span class="section-number-2">12.</span> countries as operating systems</h2>
-<div class="outline-text-2" id="text-12">
+<h2 id="orgab0a5c8"><span class="section-number-2">9.</span> countries as operating systems</h2>
+<div class="outline-text-2" id="text-9">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1855624160451473615">Twitter</a></p>
 </p>
@@ -562,13 +494,13 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 </div>
 </div>
 <div id="outline-container-org866c7d7" class="outline-2">
-<h2 id="org866c7d7"><span class="section-number-2">13.</span> prophecy</h2>
-<div class="outline-text-2" id="text-13">
+<h2 id="org866c7d7"><span class="section-number-2">10.</span> prophecy</h2>
+<div class="outline-text-2" id="text-10">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="org9811659">
+<pre class="example" id="orgca76b0f">
 &gt; originate in Maharashtra
 &gt; immediately gain some Southern holdings
 &gt; Prosperity &amp; Hindoo unity
@@ -584,8 +516,8 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 </div>
 </div>
 <div id="outline-container-org3ed5dc1" class="outline-2">
-<h2 id="org3ed5dc1"><span class="section-number-2">14.</span> Optimal Robot</h2>
-<div class="outline-text-2" id="text-14">
+<h2 id="org3ed5dc1"><span class="section-number-2">11.</span> Optimal Robot</h2>
+<div class="outline-text-2" id="text-11">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1930540688115961860">Twitter</a></p>
 </p>
@@ -599,8 +531,8 @@ THIS is what robots must look like. A flying modular octopus with wheels. Hands 
 </div>
 </div>
 <div id="outline-container-orga4a4bce" class="outline-2">
-<h2 id="orga4a4bce"><span class="section-number-2">15.</span> Sanjay Gandhi</h2>
-<div class="outline-text-2" id="text-15">
+<h2 id="orga4a4bce"><span class="section-number-2">12.</span> Sanjay Gandhi</h2>
+<div class="outline-text-2" id="text-12">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1929128404051198397">Twitter</a></p>
 </p>
@@ -615,8 +547,8 @@ Sanjay Gandhi simps/anti-natalists will be forcibly impregMANted in Priest-king&
 </div>
 </div>
 <div id="outline-container-org5ed7e0c" class="outline-2">
-<h2 id="org5ed7e0c"><span class="section-number-2">16.</span> WAR game</h2>
-<div class="outline-text-2" id="text-16">
+<h2 id="org5ed7e0c"><span class="section-number-2">13.</span> WAR game</h2>
+<div class="outline-text-2" id="text-13">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1947115310232023123">Twitter</a></p>
 </p>
@@ -627,8 +559,8 @@ A player with a Pakistan flag spawning in the Indus valley spent his entire time
 </div>
 </div>
 <div id="outline-container-org58dd7c7" class="outline-2">
-<h2 id="org58dd7c7"><span class="section-number-2">17.</span> Is it because &#x2026;</h2>
-<div class="outline-text-2" id="text-17">
+<h2 id="org58dd7c7"><span class="section-number-2">14.</span> Is it because &#x2026;</h2>
+<div class="outline-text-2" id="text-14">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938880809483866442">Twitter</a></p>
 Why does German not sound funny like Dutch? Is it because they did the holocaust?
@@ -673,8 +605,8 @@ is it because they yearn for the kitchen
 </div>
 </div>
 <div id="outline-container-orgfd33e31" class="outline-2">
-<h2 id="orgfd33e31"><span class="section-number-2">18.</span> never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</h2>
-<div class="outline-text-2" id="text-18">
+<h2 id="orgfd33e31"><span class="section-number-2">15.</span> never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought</h2>
+<div class="outline-text-2" id="text-15">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1922701558078201996">Twitter</a></p>
 Never question the wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought.
@@ -863,7 +795,7 @@ I dont like how many rightwingers, usually big accounts dabble in useless sphere
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
