--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -260,16 +260,18 @@
 </ul></li>
 <li>leli-ideology
 <ul class="org-ul">
+<li><a href="politics/leli-ideology/cop.html">Good Cop Bad Cop</a></li>
+<li><a href="politics/leli-ideology/leli_and_islam.html">Left-liberalism weds Islam ⭐</a></li>
 <li><a href="politics/leli-ideology/totalizing.html">Left-liberals view foreign policy through an ideological, not material lens</a></li>
 <li><a href="politics/leli-ideology/liberal_ideology.html">Modern liberalism as the ideology of dehātization ⭐</a></li>
 <li><a href="politics/leli-ideology/origin.html">Origin</a></li>
-<li><a href="politics/leli-ideology/self_conception.html">Self Conception</a></li>
 </ul></li>
 <li>leli-raj
 <ul class="org-ul">
 <li><a href="politics/leli-raj/classical_liberalism.html">Classical Liberalism</a></li>
 <li><a href="politics/leli-raj/raj.html">Conquest theory ⭐</a></li>
 <li><a href="politics/leli-raj/distractions.html">Don&rsquo;t get distracted by identities, &ldquo;deep state&rdquo; or &ldquo;globalism&rdquo;: attack Left-liberal ideology directly ⭐</a></li>
+<li><a href="politics/leli-raj/elections.html">Elections : Politics = Exams : Learning</a></li>
 <li><a href="politics/leli-raj/ideologies.html">Ideologies, not nations or tribes, are the fundamental unit of our time ⭐</a></li>
 <li><a href="politics/leli-raj/sovereignty.html">Is the Indian Left uniquely treasonous? ⭐</a></li>
 <li><a href="politics/leli-raj/misc.html">Misc points</a></li>
@@ -299,7 +301,6 @@
 <li>nirnaya-pill
 <ul class="org-ul">
 <li><a href="politics/nirnaya-pill/veto.html">Hindu Svarājya and the Muslim veto ⭐</a></li>
-<li><a href="politics/nirnaya-pill/liberalism-and-islam.html">Left-liberalism weds Islam ⭐</a></li>
 <li><a href="politics/nirnaya-pill/hoejabi.html">Muslim supremacy is orthogonal to Muslim traditionalism (Hoejabis are the real threat) ⭐</a></li>
 <li><a href="politics/nirnaya-pill/nirnaya.html">Nirṇaya</a></li>
 <li><a href="politics/nirnaya-pill/firebombing.html">On Firebombing Walmarts ⭐</a></li>
@@ -326,7 +327,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
