--- a/other-people/takes.html
+++ b/other-people/takes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Favorite tweets by others</title>
@@ -262,6 +262,21 @@
 </ul>
 </div>
 </div>
+<p>
+Five types of good poasters on x dot com the everything app:
+</p>
+
+<p>
+takemaxxers
+factmaxxers
+spankmaxxers
+auramaxxers
+autismmaxxers
+</p>
+
+<p>
+These are the takemaxxers
+</p>
 <div id="outline-container-orgb763605" class="outline-2">
 <h2 id="orgb763605"><span class="section-number-2">1.</span> Shashank</h2>
 <div class="outline-text-2" id="text-1">
@@ -1133,7 +1148,7 @@ Aside from certain extraordinary Secretary of States and Presidents, it&rsquo;s 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
