--- a/politics/leli-raj/sovereignty.html
+++ b/politics/leli-raj/sovereignty.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Is the Indian Left uniquely treasonous? ⭐</title>
@@ -234,7 +234,7 @@ Whereas in reality what&rsquo;s going on here is that other nations were so thor
 </p>
 
 <p>
-&ldquo;Theft&rdquo; only means anything when property exists, &ldquo;adultery&rdquo; only means anything when marriage exists, and &ldquo;treason&rdquo; only means anything when loyalty exists.
+&ldquo;Theft&rdquo; only means anything when property exists, &ldquo;adultery&rdquo; only means anything when marriage exists, and &ldquo;treason&rdquo; only means anything when sovereignty exists.
 </p>
 
 <p>
@@ -243,7 +243,7 @@ Whereas in reality what&rsquo;s going on here is that other nations were so thor
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:28</p>
 </div>
 </body>
 </html>
